# ppln-ibeat-kidney_ssa

./: .zenodo.json  README.md  env.yml  environment.yml  pyproject.toml  requirements.txt  requirements_free.txt  requirements_gpu.txt
dev/: case_study.py  fig_illustrate_features.py  stage_1_normalize.py  stage_1_normalize_case.py  stage_7_represent.py  test_shape_models.py  test_utils_lb.py  test_utils_normalization.py  test_utils_sdf.py  test_utils_zernike.py
hpc/: arxv.sh  corr.sh  kssa.sh  ppln.sh  stg1-3.sh  stg10.sh  stg12-1.sh  stg12-2.sh  stg12.sh  stg13-1.sh  stg13-2.sh  stg13.sh  stg14.sh  stg15.sh  stg16.sh  stg17.sh  stg19.sh  stg4-6.sh  stg6.sh  stg7.sh  stg7b.sh  stg8-10a.sh  stg8-10b.sh
src/: batch_process.py  stage_1_normalize.py  stage_2_save_as_npz.py  stage_3_rotate.py  stage_5_measure.py  stage_7_corr.py  stage_7_display.py  stage_7_normalize.py  stage_8_build_features.py  stage_9_build_correlation_matrices.py
src/data/: dixon_data.csv  kidney_cluster_ids.json  subject_cluster_ids.json
src/ibeat_kidney_ssa/: __init__.py  ppln.py  stage_10_deep_pca.py  stage_10_dice_matrix.py  stage_11_clustering.py  stage_11_hausdorff_matrix.py  stage_12_corr.py  stage_12_features.py  stage_12_representation.py  stage_12_spectral_pca.py  stage_13_chebyshev_pca.py  stage_13_representation.py  stage_14_legendre_pca.py  stage_14_pca.py  stage_15_deep_pca.py  stage_15_spline_pca.py  stage_16_clustering.py  stage_16_pspline_pca.py  stage_16_rbf_pca.py  stage_17_rbf_pca.py  stage_17_wavelet_pca.py  stage_18_deep_pca.py  stage_19_deep_pca.py  stage_1_normalize.py  (+28 more)
(+31 files in other folders)
