[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ibeat-kidney-ssa"
version = "0.0.0"
dependencies = [
  'tqdm',
  'numpy',
  'dask',
  'scipy',
  'vreg',
  'pyvista', 
  'scikit-learn',
  'numpyradiomics',
  'dbdicom',
  'pydmr',
  'scikit-image',
  'trimesh',
  'moviepy',
  'dask-ml',
  'zarr',
  'psutil',
]

[tool.setuptools.packages.find]
where = ["src"]