[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ibeat-kidney-ssa"
version = "0.0.0"
dependencies = [
  'matplotlib',
  'zarr',
  'numpy',
  'pandas',
  'dask',
  'tqdm', 
  'numpyradiomics',
  'pydmr',
  'dbdicom',
  'vreg',
  'miblab-ssa',
  'miblab-plot',
  'seaborn',
]

[tool.setuptools.packages.find]
where = ["src"]